<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cc.nctu1210.childcare.MasterAccountCreateActivity"
    android:orientation="vertical"
    android:gravity="top">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:text="@string/master_account_create_title"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="0dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/account"
            android:id="@+id/textView1"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_email_error"
            android:src="@android:drawable/ic_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_error"
            android:id="@+id/txv_email_error"
            android:visibility="visible"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold"
            android:singleLine="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10sp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edt_account"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_foreground_material_dark"
            android:hint="@string/account_hint"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@." />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/password"
            android:id="@+id/textView2"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10sp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edt_password"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_foreground_material_dark"
            android:singleLine="true"
            android:inputType="textPassword"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/password_hint" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/confirm"
            android:id="@+id/textView4"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_error"
            android:src="@android:drawable/ic_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_error"
            android:id="@+id/txv_error"
            android:visibility="visible"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold"
            android:singleLine="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10sp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edt_confirm"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_foreground_material_dark"
            android:singleLine="true"
            android:inputType="textPassword"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/password_hint" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/set_alarm_time"
            android:id="@+id/textAlarm"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edt_alarm_time"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_foreground_material_dark"
            android:singleLine="true"
            android:digits="0123456789"
            android:layout_marginLeft="20dp"
            android:hint="@string/five" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/minute"
            android:id="@+id/textMin"
            android:textColor="@android:color/white"
            android:layout_marginLeft="20dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="10sp">

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/bt_cancel"
            android:layout_marginLeft="35dp"
            android:enabled="true" />

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/bt_next"
            android:layout_marginLeft="35dp"
            android:enabled="false" />
    </LinearLayout>

</LinearLayout>
