<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:id="@+id/text_set_user"
        android:text="@string/child_profile_create_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text=""/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_weight="2"
                android:text="@string/device_list"/>
            <ImageButton
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:background="@color/black"
                android:id="@+id/image_button_set_ble"
                android:src="@drawable/ble_discovery"/>
        </LinearLayout>
        <ListView
            android:id="@+id/list_set_device"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_weight="1"
            >
        </ListView>
        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/bt_next"
            android:layout_marginLeft="180dp"
            />
    </LinearLayout>

</LinearLayout>